# volume-price-analysis

./: .coverage  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  LICENSE  QUICKSTART.md  README.md  SECURITY.md  TESTING.md  UV_SETUP.md  example_usage.py  pyproject.toml  renovate.json  requirements.txt  run_analysis_local.py
.claude/: settings.local.json
.github/workflows/: ci.yml  pr-title.yml  release.yml
.serena/: project.yml
src/volume_price_analysis/: __init__.py  data_fetcher.py  indicators.py  server.py
tests/: __init__.py  conftest.py  test_data_fetcher.py  test_indicators.py  test_server.py
