[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "volume-price-analysis-mcp"
version = "1.1.1"
description = "MCP server for stock volume-price analysis"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mcp==1.26.0",
    "yfinance==1.1.0",
    "pandas==3.0.0",
    "numpy==2.4.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/volume_price_analysis"]

[dependency-groups]
dev = [
    "pytest==8.3.5",
    "pytest-cov==6.1.0",
    "pytest-asyncio==1.2.0",
    "pytest-mock==3.15.0",
    "ruff==0.14.13",
    "mypy==1.19.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=src/volume_price_analysis",
    "--cov-report=term-missing",
    "--cov-report=html",
]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "ASYNC", # flake8-async
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[project.scripts]
volume-price-analysis = "volume_price_analysis.server:main"
